# arabic-rag-evaluation-observability-harness

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  FILE_MANIFEST.md  FINAL_DELIVERY.md  LICENSE  Makefile  README.md  README_AR.md  agent.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: evaluation.yml
assets/visuals/: arabic_rag_eval_observability_harness_portfolio_final.html
configs/: harness.yaml  models.yaml  thresholds.yaml
configs/prompts/: llm_judge_arabic.yaml
dashboard/: streamlit_app.py
data/corpus/: saudi_labor_hr_sample.md
data/golden/: arabic_hr_golden_set.jsonl
docs/: architecture.md  ci_cd_gates.md  cv_alignment.md  dashboard_spec.md  data_card.md  demo_script.md  evaluation_metrics.md  final_demo_walkthrough.md  index.md  observability.md  portfolio_case_study.md  portfolio_snippets.md  release_notes_v1.0.0.md  risk_register.md  visual_blueprint.md
monitoring/: otel-collector-config.yaml  prometheus.yml
reports/: README.md  api_evaluation_report.json  api_release_report.md  failure_evaluation_report.json  failure_release_report.md  human_review_evaluation_report.json  human_review_release_report.md  latest_evaluation_report.json  latest_release_report.md  sample_release_report.md
scripts/: generate_report.py  run_evaluation.py  run_failure_demo.py  run_human_review_demo.py  seed_dataset.py  smoke_test.sh
tests/: test_api.py  test_citation_validation.py  test_end_to_end.py  test_normalizer.py  test_quality_gates.py  test_retrieval_metrics.py  test_safety.py  test_storage.py
(+38 files in other folders)
