[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-rag-eval-harness"
version = "0.1.0"
description = "Arabic RAG evaluation, observability, audit, and CI/CD release gates."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ahmed Alghuraymil" }]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "typer>=0.9",
  "rich>=13.7",
  "PyYAML>=6.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "httpx>=0.26",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "prometheus-client>=0.19",
  "opentelemetry-api>=1.22",
  "opentelemetry-sdk>=1.22"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.2",
  "mypy>=1.8"
]
dashboard = [
  "streamlit>=1.31"
]
advanced = [
  "ragas>=0.1.0",
  "mlflow>=2.10",
  "streamlit>=1.31"
]

[project.scripts]
rag-eval = "rag_eval_harness.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
